# Online-Parameter-Estimation-Using-the-Kaczmarz-Method

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TinyMPC_Quadrotor_Hover.ipynb  USAGE.md  cart_pole.ipynb  double_pendulum.ipynb  param_est_v3.ipynb  run_exps.sh  test for RK adaptive.ipynb
cmake/: dekaConfig.cmake.in  param_idConfig.cmake.in
examples/quadrotor_hover/: CMakeLists.txt
examples/quadrotor_hover/src/: main.cpp  quadrotor.cpp  quadrotor.hpp
include/deka/: lib.hpp  solvers.hpp  util.hpp
include/param_id/: lib.hpp
python/: LQR_controller.py  analyze_corr.py  batched_acc_param_est.py  batched_acc_payload_param_est.py  batched_param_est.py  batched_payload_param_est.py  debug.py  deka_param_grid_search.py  double_pen_LQR.py  double_pendulum_dynamics.py  drifting_param_est.py  estimation_methods.py  ne_quadrotor.ipynb  ne_quadrotor.py  param_est.py  param_est_new.py  payload_param_est.py  quadrotor_dynamics.py  random_systems.ipynb  random_systems_total.ipynb  robot_plot.ipynb  run_payload_trials.py  run_payload_trials_parallel.py  run_payload_trials_parallel_low_noise.py  run_payload_trials_parallel_no_noise.py  run_payload_trials_parallell_high_noise.py  show_gridsearch_results.py  simulator.py  test_rand_sys.py  utilities.py  viz_trials.py  wind_param_est.py
python/common/: LQR_controller.py  data_processing.py  estimation_methods.py  estimation_methods_old.py  make_trajectories.py  noise_models.py  utilities.py  viz_results.py
python/debug/: test_noise_models_AWGN.py  test_noise_models_realistic.py  test_quadrotor_hover.py  test_quadrotor_tracking.py
python/double_pendulum/: double_pendulum_dynamics.py
python/exp_1:ours_vs_baselines/: run_exp1.sh  run_exp1_parallel.py  run_payload_trials_parallel.py  single_quadrotor_trial.py
python/exp_2:ours_vs_kaczmarz/: run_exp2.sh  run_exp2_parallel.py
python/exp_3:switching_ours_and_baselines/: run_exp3.sh  run_exp3_parallel.py
python/quadrotor/: quadrotor.py
python/visualizations/: ne_quadrotor.ipynb  test_quadrotor_dynamics.ipynb
src/: CMakeLists.txt  lib.cpp  solvers.cpp  util.cpp
tests/: CMakeLists.txt  test.cpp
